# Opencode-project

./: .gitignore  HANDOFF.md  README.md  connect_running.py  connect_running2.py  diag.py  diag2.py  explore_api.py  pyproject.toml  read_mtf.py  read_mtf_dde.py  requirements.txt  test_modify.py
handoffs/: knowledgebase.md  microwaviness-analysis.md  zemax-zpl-automation.md
tests/: __init__.py  test_core.py
zemax_debug/: __init__.py  cli.py
zpl_toolkit/: __init__.py  bridge.py  connection.py  debug.py  executor.py  generator.py  manager.py  parser.py  regression.py  types.py
